# helpdesk-system-Cpp

./: CMakeLists.txt  Employee.cpp  Employee.h  FileReader.cpp  FileReader.h  HardwareTicket.cpp  HardwareTicket.h  Helpdesk.cpp  Helpdesk.h  HelpdeskEmployee.cpp  HelpdeskEmployee.h  README.md  SoftwareTicket.cpp  SoftwareTicket.h  Ticket.cpp  Ticket.h  main.cpp
